# serve.my-pi.soft

./: CMakeLists.txt  README.md
API/: .project  CMakeLists.txt
API/dfu-prog/: arguments.c  arguments.h  atmel.c  atmel.h  commands.c  commands.h  config.h  dfu-bool.h  dfu-device.h  dfu.c  dfu.h  intel_hex.c  intel_hex.h  main.c  util.c  util.h
API/pyopenscb/: .project  .pydevproject  __init__.py
API/src/: arch.h  openscb.c  openscb.h  openscb_advanced.c  openscb_advanced.h  openscb_dev.c  openscb_dev.h  openscb_dev_priv.h  openscb_usb.c  openscb_usb.h  openscb_utils.c  openscb_utils.h  pc_comm_api.h  pc_comm_const.h
API/test_api/: test_api.c
Driver/: OpenSCB.inf
Embedded/: .cproject  .project  README
Embedded/doxygen/: Doxyfile  doxytrac.css  header.html  tabstrac.css
Embedded/src/: calibration.c  calibration.h  core.c  core.h  exception_handler.c  flash_spi.c  flash_spi.h  io.h  main.c  out_ctrl.c  out_ctrl.h  pc_comm.c  pc_comm.h  pc_comm_uart.c  pc_comm_uart.h  pc_comm_usb.c  pc_comm_usb.h  rc_utils.c  rc_utils.h  spi_driver.c  spi_driver.h  sys_conf.c  sys_conf.h  system.c  system.h  trace.c  trace.h  user_flash.c  user_flash.h
Embedded/src/appli/: appli_ctrl.h  (+2 more)
GUI/: .pydevproject
GUI/src/: board.py  board_display.py  control_tab.py  debug_tab.py  dfuprog.py  input_config_tab.py  main.py  main_win.py  main_win_tab.py  output_config_tab.py  output_table.py  seq_editor.py  seq_graphics.py  seq_tab.py  seq_table.py  sequence.py  servo_calib.py  servo_display.py  servo_table.py  table_utils.py  user_flash_table.py
Misc/: trigo hexapod IK.ods
(+82 files in other folders)
